<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.CreateUserActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:elevation="0dp"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/full_name_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/email_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etName" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvUserGenderTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/gender"
            android:textColor="#000"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etEmailAddress" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@+id/tvUserGenderTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvUserGenderTitle">

            <RadioButton
                android:id="@+id/rbMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/rbFeMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female" />

        </RadioGroup>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvUserStatusTitle"
            android:layout_width="wrap_content"
            android:layout_height="27dp"
            android:layout_marginTop="32dp"
            android:text="@string/status"
            android:textColor="#000"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvUserGenderTitle" />

        <Switch
            android:id="@+id/userStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/tvUserStatusTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvUserStatusTitle"
            app:layout_constraintVertical_bias="1.0"
            android:textOn="@string/active"
            android:textOff="@string/inactive"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCreateUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text="@string/create_user"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>